--- a/test1extend.yml
+++ b/test1extend.yml
@@ -19,7 +19,7 @@ jobs:
           python-version: 3.11
 
       - name: Install Dependencies
-        run: pip install -r requirements.txt
+        run: requirements.txt
 
       - name: Run Python Script 
         run: |
