--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,2 @@
-pip install -r requirements.txt
-pyodbc==4.0.42
-smartsheet-python-sdk==2.155.0
-package-name==version
+pyodbc
+smartsheet-python-sdk
