--- a/test1extend.yml
+++ b/test1extend.yml
@@ -3,7 +3,7 @@ name: Smartsheet to Azure SQL CI/CD
 on:
   push:
     branches:
-      - master  # Change to the branch you want to trigger the workflow on
+      - main  # Change to the branch you want to trigger the workflow on
 
 jobs:
   data_transfer:
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.8'  # Specify the Python version you need
+          python-version: '3.11'  # Specify the Python version you need
 
       - name: Install dependencies
         run: |
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run Smartsheet to SQL Script
         run: |
-          /usr/bin/python3.8 updating.py  # Use the correct path to your Python script
+          python updating.py  # Use the correct path to your Python script
         env:
           AZURE_SQL_SERVER_NAME: ${{ secrets.AZURE_SERVER_NAME }}
           AZURE_SQL_DB_NAME: ${{ secrets.AZURE_DATABASE_NAME }}
